src/vm/snapshots/hebi__vm__tests__closure_call.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
fn outer():
  v := "yo"
  fn inner():
    return v
  return inner

outer()()


# Result:
Ok(
    Object(
        "yo",
    ),
)
