src/vm/snapshots/hebi__vm__tests__data_class_derived_with_method.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  pass
class U(T):
  v = 0
  fn test(self): pass
U


# Result:
Object(
    ClassType {
        name: "U",
        init: None,
        fields: {
            "v": Int(
                0,
            ),
        },
        methods: {
            "test": Function {
                descriptor: FunctionDescriptor {
                    name: "test",
                    params: Params {
                        has_self: true,
                        min: 0,
                        max: 0,
                    },
                    upvalues: RefCell {
                        value: [],
                    },
                    frame_size: 1,
                    instructions: 2,
                    constants: 0,
                },
                upvalues: [],
                module_id: ModuleId(
                    None,
                ),
            },
        },
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {},
                methods: {},
                parent: None,
            },
        ),
    },
)
