src/vm/snapshots/hebi__vm__tests__empty_table.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := {}
v


# Result:
Object(
    {},
)
