src/vm/snapshots/hebi__vm__tests__example.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := 0
v


# Result:
Ok(
    Int(
        0,
    ),
)
